src/test/05-Global/104a.txt
104b.ck:1:1: error: global Object 'foo' has different type 'HidMsg' than already existing global Object of the same name
[1] global HidMsg foo;
    ^
